--- a/index.html
+++ b/index.html
@@ -456,8 +456,9 @@
         <div class="footer-form">
           <p class="form-title">Подпишитесь на рассылку</p>
           <form action="" class="subs-form">
-            <label for="name"></label>
-            <input type="text" class="footer-input" placeholder="E-mail" />
+            <label for="name">
+              <input type="text" class="footer-input" placeholder="E-mail"
+            /></label>
 
             <div class="footer-button">
               <button type="submit" class="footer-form-button">Подписаться</button>
