--- a/portfolio.html
+++ b/portfolio.html
@@ -287,6 +287,19 @@
             </li>
           </ul>
         </div>
+        <div class="footer-form">
+          <p class="form-title">Подпишитесь на рассылку</p>
+          <form class="subs-form">
+            <label> <input type="text" class="footer-input" placeholder="E-mail" /></label>
+
+            <div class="footer-button">
+              <button type="submit" class="footer-form-button">Подписаться</button>
+              <svg class="footer-form-icon">
+                <use href="./images/symbol-defs.svg#icon-icon-send"></use>
+              </svg>
+            </div>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
