Update input name

--- a/index.html
+++ b/index.html
@@ -456,7 +456,9 @@
         <div class="footer-form">
           <p class="form-title">Подпишитесь на рассылку</p>
           <form class="subs-form">
-            <label> <input type="text" class="footer-input" placeholder="E-mail" /></label>
+            <label>
+              <input type="text" name="user-mail" class="footer-input" placeholder="E-mail" />
+            </label>
 
             <div class="footer-button">
               <button type="submit" class="footer-form-button">Подписаться</button>
@@ -484,7 +486,7 @@
           <label class="form-label">
             <span class="form-label-text">Имя</span>
             <span class="modal-icon-wrapper">
-              <input type="text" class="form-input" />
+              <input type="text" name="user-name" class="form-input" />
               <svg class="modal-form-icon">
                 <use href="./images/symbol-defs.svg#icon-user-icon"></use>
               </svg>
@@ -494,7 +496,7 @@
           <label class="form-label">
             <span class="form-label-text">Телефон</span>
             <span class="modal-icon-wrapper">
-              <input type="tel" class="form-input" />
+              <input type="tel" name="user-tel" class="form-input" />
               <svg class="modal-form-icon">
                 <use href="./images/symbol-defs.svg#icon-user-phone-icon"></use>
               </svg>
@@ -504,7 +506,7 @@
           <label class="form-label">
             <span class="form-label-text">Почта</span>
             <span class="modal-icon-wrapper">
-              <input type="email" class="form-input" />
+              <input type="email" name="user-name-modal-form" class="form-input" />
               <svg class="modal-form-icon">
                 <use href="./images/symbol-defs.svg#icon-user-mail-icon"></use>
               </svg>
