--- a/portfolio.html
+++ b/portfolio.html
@@ -290,7 +290,9 @@
         <div class="footer-form">
           <p class="form-title">Подпишитесь на рассылку</p>
           <form class="subs-form">
-            <label> <input type="text" class="footer-input" placeholder="E-mail" /></label>
+            <label>
+              <input type="text" name="user-mail" class="footer-input" placeholder="E-mail" />
+            </label>
 
             <div class="footer-button">
               <button type="submit" class="footer-form-button">Подписаться</button>
