Remake footer-button

--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
           </address>
         </div>
         <div class="footer-socials">
-          <h2 class="socials-title">присоединяйтесь</h2>
+          <p class="socials-title">присоединяйтесь</p>
           <ul class="socials-list list">
             <li class="socials-link">
               <a href="" class="footer-socials-link">
@@ -460,12 +460,12 @@
               <input type="text" name="user-mail" class="footer-input" placeholder="E-mail" />
             </label>
 
-            <div class="footer-button">
-              <button type="submit" class="footer-form-button">Подписаться</button>
+            <button type="submit" class="footer-form-button">
+              Подписаться
               <svg class="footer-form-icon">
                 <use href="./images/symbol-defs.svg#icon-icon-send"></use>
               </svg>
-            </div>
+            </button>
           </form>
         </div>
       </div>
